--- a/index.html
+++ b/index.html
@@ -103,6 +103,6 @@
       <p>&copy; 2024 João Victor Estevan. Todos os direitos reservados.</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
