--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
           cartas e clique em 'Verificar'.
         </p>
         <p>
-          Use a busca para encontrar cartas específicas na sua coleção e
-          visualize os preços ao passar o mouse sobre o nome da carta.
+          Use a busca para encontrar cartas específicas na sua coleção.
         </p>
       </section>
 
