--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <p>
           Para adicionar cartas, insira uma lista de cartas no formato '1 Sol
           Ring', '1 Arcane Signet', etc., e clique em 'Adicionar Cartas'.
+          Vá em seu deck na LigaMagic, na opção do canto esquerdo superior há várias opções, exporte como MTGO, pegando uma lista em inglês, cole todos seus decks na coleção para facilitar o uso!
         </p>
         <p>
           Para verificar quais cartas você não possui, insira uma lista de
