--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
           Para adicionar cartas, insira uma lista de cartas no formato '1 Sol
           Ring', '1 Arcane Signet', etc., e clique em 'Adicionar Cartas'.
           <p>Vá em seu deck na LigaMagic, na opção do canto esquerdo superior há várias opções, exporte como MTGO, pegando uma lista em inglês, cole todos seus decks na coleção para facilitar o uso!</p>
+          <p>A ideia do App até o momento ser um auxilio a decks Singletons(Possui apenas uma cópia de cada carta, então não há como estar verificando quantidades de lands por exemplo! 11 Islands não é igual a 10 Islands, por exemplo.</p>
         </p>
         <p>
           Para verificar quais cartas você não possui, insira uma lista de
