--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- HTML -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -52,7 +53,10 @@
             id="search-input"
             placeholder="Busque na sua coleção..."
           />
-          <textarea id="collection-editor" readonly></textarea>
+          <textarea id="collection-editor"></textarea>
+          <button id="update-collection" class="btn-primary">
+            Atualizar Coleção
+          </button>
         </div>
 
         <div class="form">
@@ -80,9 +84,6 @@
           Para verificar quais cartas você não possui, insira uma lista de
           cartas e clique em 'Verificar'.
         </p>
-        <p>
-          Use a busca para encontrar cartas específicas na sua coleção.
-        </p>
       </section>
 
       <section id="about" class="section">
@@ -104,6 +105,5 @@
     <footer>
       <p>&copy; 2024 João Victor Estevan. Todos os direitos reservados.</p>
     </footer>
-
   </body>
 </html>
