--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           Para adicionar cartas, insira uma lista de cartas no formato '1 Sol
           Ring', '1 Arcane Signet', etc., e clique em 'Adicionar Cartas'.
           <p>1. Vá em seu deck na LigaMagic, assim como o deck que você deseja verificar, ou relação de cartas, na opção do canto esquerdo superior há várias opções, exporte como MTGO, pegando uma lista em inglês, cole todos seus decks na coleção para facilitar o uso!</p>
-          <p>A ideia do App até o momento ser um auxilio a decks Singletons(Possui apenas uma cópia de cada carta, então não há como estar verificando quantidades de lands por exemplo! 11 Islands não é igual a 10 Islands, por exemplo.</p>
+          <p>A ideia do App até o momento ser um auxilio a decks Singletons(Possui apenas uma cópia de cada carta, então não há como estar verificando quantidades de lands por exemplo! 11 Islands e 10 Islands são itens totalmente distintos!)</p>
         </p>
         <p>
           Para verificar quais cartas você não possui, insira uma lista de
