--- a/index.html
+++ b/index.html
@@ -76,22 +76,25 @@
         <h2>Como Utilizar</h2>
         <p>
           Para adicionar cartas, insira uma lista de cartas no formato '1 Sol
-          Ring', '1 Arcane Signet', etc., e clique em 'Adicionar Cartas'.
-          <p>1. Vá em seu deck na LigaMagic, assim como o deck que você deseja verificar, ou relação de cartas, na opção do canto esquerdo superior há várias opções, exporte como MTGO, pegando uma lista em inglês, cole todos seus decks na coleção para facilitar o uso!</p>
+          Ring', '1 Arcane Signet', etc.(uma em cada linha), e clique em 'Adicionar Cartas'.
+          <p>Vá em seu deck na LigaMagic, assim como o deck que você deseja verificar que quer montar, ou relação de cartas, na opção do canto esquerdo superior há várias opções, exporte como MTGO, pegando uma lista em inglês, cole todos seus decks na coleção para facilitar o uso!</p>
           <p>A ideia do App até o momento ser um auxilio a decks Singletons(Possui apenas uma cópia de cada carta, então não há como estar verificando quantidades de lands por exemplo! 11 Islands e 10 Islands são itens totalmente distintos!)</p>
         </p>
         <p>
           Para verificar quais cartas você não possui, insira uma lista de
-          cartas e clique em 'Verificar'.
+          cartas e clique em 'Verificar'. 
+        
         </p>
       </section>
 
       <section id="about" class="section">
-        <h2>Sobre o Desenvolvedor</h2>
-        <p>Desenvolvido por João Victor Estevan.</p>
+        <h2>Desenvolvedor</h2>
+        <p></p>
         <p>
-          Você pode encontrar mais sobre mim e meus projetos no meu
-          <a href="https://github.com/jow320" target="_blank">GitHub</a>.
+          
+          <a href="https://github.com/jow320" target="_blank">
+            <i class="fab fa-github github-icon"></i>
+          </a>
         </p>
         <h3>Tecnologias Utilizadas</h3>
         <div class="tech-icons">
