--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
           </form>
         </div>
 
+        <div class="form">
+            <a href="https://www.cardtrader.com/wishlists/new" target="_blank" rel="noopener noreferrer"><button type="button" class="btn-primary">Comprar por lista CardTrader</button></a>
+            <a href="https://www.ligamagic.com.br/?view=cards/lista" target="_blank" rel="noopener noreferrer"><button type="button" class="btn-primary">Comprar por lista LigaMagic</button></a>
         <div id="missing-output"></div>
       </section>
 
@@ -83,7 +86,6 @@
         <p>
           Para verificar quais cartas você não possui, insira uma lista de
           cartas e clique em 'Verificar'. 
-        
         </p>
       </section>
 
@@ -91,7 +93,6 @@
         <h2>Desenvolvedor</h2>
         <p></p>
         <p>
-          
           <a href="https://github.com/jow320" target="_blank">
             <i class="fab fa-github github-icon"></i>
           </a>
