--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h2>Como Utilizar</h2>
         <p>
           Para adicionar cartas, insira uma lista de cartas no formato '1 Sol
-          Ring', '1 Arcane Signet', etc.(uma em cada linha), e clique em 'Adicionar Cartas'(Tudo ficará salvo no seu navegador de escolha).
+          Ring' '1 Arcane Signet', etc.(uma em cada linha e sem virgulas!), e clique em 'Adicionar Cartas'(Tudo ficará salvo no seu navegador de escolha).
           <p>Vá em seu deck na LigaMagic, assim como o deck que você deseja verificar que quer montar, ou relação de cartas, na opção do canto esquerdo superior há várias opções, exporte como MTGO, pegando uma lista em inglês, cole todos seus decks na coleção para facilitar o uso!</p>
           <p>A ideia do App até o momento ser um auxilio a decks Singletons(Possui apenas uma cópia de cada carta, então não há como estar verificando quantidades de lands por exemplo! 11 Islands e 10 Islands são itens totalmente distintos!)</p>
         </p>
