--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <form id="card-form">
             <textarea
               id="card-input"
-              placeholder="Adicione suas cartas aqui... (1 Sol Ring, 1 Arcane Signet, etc.)"
+              placeholder="1 Sol Ring&#10;1 Arcane Signet"
             ></textarea>
             <button type="submit">Adicionar Cartas</button>
           </form>
@@ -63,7 +63,7 @@
           <form id="missing-form">
             <textarea
               id="missing-input"
-              placeholder="Verifique quais cartas você não possui... (1 Sol Ring, 1 Arcane Signet, etc.)"
+              placeholder="1 Demonic Consultation&#10;1 Devoted Druid"
             ></textarea>
             <button type="submit">Verificar</button>
           </form>
